redis-queue/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-queue
  namespace: team16
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-queue
